code/infrastructure/argocd/ingress/argocd-ingress-k3d.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-argocd-prefix
  namespace: argocd

spec:
  stripPrefix:
    prefixes:
      - /argocd

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
     - websecure
  routes:
    - kind: Rule
      # match: Host(`mspbase02.pmel.noaa.gov`) && PathPrefix(`/argocd`)
      match: Host(`localhost`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      # middlewares:
      # - name: strip-argocd-prefix
      #   namespace: argocd
    - kind: Rule
      # match: Host(`mspbase02.pmel.noaa.gov`) && PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      match: Host(`localhost`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
      # middlewares:
      # - name: strip-argocd-prefix
      #   namespace: argocd
  tls:
    certResolver: default
